__config__/server.service.template.yml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  type: NodePort
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32000
