__config__/server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app: server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: samnsimson/docker-compose-learning-server:latest
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"

---

apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  type: NodePort
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32000
