__config__/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: dockerdemo.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: client
              port:
                number: 3000
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: server
              port:
                number: 4000
